filter by source in lead list
Former-commit-id: 07359563431f50f53371dbab04ecd5f0a4467850 [formerly e6f85ea6abd2cb242b16de44e007b86197a0703c] [formerly f948e10cf8804aa39d2426b500883b23dfd418ef [formerly ac4a4bb17630cc50e85e4b158c955206faff9aba]]
Former-commit-id: 0dc6c25c23fa94ff73bdbbc8a6df10d782ab329d [formerly e72a7068b67605e000d012400e0e2c625576dbe3]
Former-commit-id: 52553681db52de9b3cd6d1dc77b8bff38341dfd1

--- a/templates/leads/lead_list.html
+++ b/templates/leads/lead_list.html
@@ -563,26 +563,26 @@
                           </button>
                           <ul class="dropdown-menu" role="menu">
                               <li>
-                                  <a ng-click="leadsSourceFilter='All'">
+                                  <a ng-click="leadsSourceFilter='All';filter_by_source()">
                                       <i class="fa  fa-th-large" style=""></i> All</a>
                               </li>
                               <li>
-                                  <a ng-click="leadsSourceFilter='Twitter'">
+                                  <a ng-click="leadsSourceFilter='Twitter';filter_by_source(leadsSourceFilter)">
                                       <i class="fa  fa-twitter-square regFltrIcon"
                                          style="color: #55ACEE;font-size: 16px;margin-left: -2px;"></i> Twitter</a>
                               </li>
                               <li>
-                                  <a ng-click="leadsSourceFilter='LinkedIn'">
+                                  <a ng-click="leadsSourceFilter='LinkedIn';filter_by_source(leadsSourceFilter)">
                                       <i class="fa  fa-linkedin-square regFltrIcon"
                                          style="color: #1E87BD;font-size: 16px;margin-left: -2px;"></i> LinkedIn</a>
                               </li>
                               <li>
-                                  <a ng-click="leadsSourceFilter='Gmail'">
+                                  <a ng-click="leadsSourceFilter='Gmail';filter_by_source(leadsSourceFilter)">
                                       <img src="static/img/sm-gmail-true.png" alt=""
                                            style="width: 16px;margin-right: 3px;"> Gmail</a>
                               </li>
                               <li>
-                                  <a ng-click="filterBySource('ioGrow')">
+                                  <a ng-click="filterBySource('ioGrow');filter_by_source(leadsSourceFilter)">
                                       <img src="static/img/sm-iogrow-true.png" alt=""
                                            style="width: 16px;margin-right: 3px;"> ioGrow</a>
                               </li>
