--- a/templates/base.html
+++ b/templates/base.html
@@ -421,7 +421,7 @@
      }
      var ROOT = getRoot();
 
-    var ROOT = 'https://gcdc2013-iogrow.appspot.com/_ah/api';
+  // var ROOT = 'https://gcdc2013-iogrow.appspot.com/_ah/api';
 
 
     // var ROOT = '/_ah/api';
