implement export front end for case oppo and task
Former-commit-id: 3ea1fd6a078a30034b52ee749d4e6093fb6c907f [formerly df53d39c1bcf3b02f082ef6f71ce847a8a3f71cb] [formerly 8f558e162e1a987f66094b3cfb7bc9cfe19c977a [formerly d384244cb02c2a6c30e5e2956a3197528b8b89a9]]
Former-commit-id: 3f09a7fe67930db843abdb1d22077d07c2792b28 [formerly 28ac3f628b8f830e99524839c4b6825b7f95db5d]
Former-commit-id: cc664a64bb932d08292d0cce63ae4d5aba4a5eee

--- a/templates/cases/case_list.html
+++ b/templates/cases/case_list.html
@@ -51,6 +51,9 @@
                 <a class="" title="Convert" style="font-size: 16px;color: #737373;cursor: pointer;margin-left: 12px; margin-right: 12px;" ng-click="switchShow()"> 
                       <i class="fa  fa-refresh" style="padding-top: 6px; font-size: 16px;"></i>
                 </a>-->
+                  <a class="headerBtn hide_md" title="{{_('Export')}}" id="sample_editable_1_new_export" ng-click="ExportCsvFile()">
+                      <i class="fa fa-cloud-download"></i>
+                </a>
                 <a class="" title="Share" style="font-size: 16px;color: #737373;cursor: pointer;margin-left: 12px; margin-right: 12px;" href="#sharingSettingsModal" data-toggle="modal" ng-hide="selectedCards.length==0" ng-click="checkPermissions({{ME}})"> 
                       <i class="fa fa-share-square-o" style="padding-top: 6px; font-size: 16px;"></i>
                 </a>
@@ -1014,6 +1017,37 @@
     </div>
 
 </div>
+
+<!-- export data on csv file -->
+<div class="modal fade customPopUp" id="TakesFewMinutes" tabindex="-1" role="dialog"
+             aria-labelledby="myModalLabel" aria-hidden="true">
+            <div class="modal-dialog">
+                <div class="modal-content">
+                    <div class="modal-header">
+                        <button type="button" class="close" data-dismiss="modal" aria-hidden="true"></button>
+                        <h3 id="myModalLabel">
+                            <i class="fa fa-cloud-download"></i>{{_(" Export Cases")}}</h3>
+                    </div>
+                    <div class="modal-body">
+
+                        <p>  <%=msg%></p>
+
+                        <p>{{_("Note : you will receive an email ")}}</p>
+
+                    </div>
+                    <div class="modal-footer">
+                        <button type="button" class="btn default" data-dismiss="modal" id="close_btn">{{_("NO")}}
+                        </button>
+                        <button ng-click="LoadCsvFile()" type="submit" class="btn green btn-primary addContactNow"
+                                id="load_btn">{{_("YES")}}
+                        </button>
+                    </div>
+                </div>
+                <!-- /.modal-content -->
+            </div>
+            <!-- /.modal-dialog -->
+        </div>
+<!-- end of modal -->
 <script type="text/javascript">
   $("#select2_sample2").select2({
         placeholder: "{{ _('Click to Select a label')}}",
