--- a/templates/activities/all_tasks.html
+++ b/templates/activities/all_tasks.html
@@ -45,6 +45,9 @@
                 <!--<a class="" title="Preview" style="font-size: 16px;color: #737373;cursor: pointer;margin-left: 12px; margin-right: 12px;" ng-click="switchShow()"> 
                       <i class="fa fa-eye" style="padding-top: 6px; font-size: 16px;"></i>
                 </a>-->
+                  <a class="headerBtn hide_md" title="{{_('Export')}}" id="sample_editable_1_new_export" ng-click="ExportCsvFile()">
+                      <i class="fa fa-cloud-download"></i>
+                </a>
                 <a class="" ng-hide=" selected_tasks.length==0" title="{{ _('Close') }}" style="font-size: 16px;color: #737373;cursor: pointer;margin-left: 12px; margin-right: 12px;" ng-click="beforecloseTask()"> 
                       <i class="fa fa-lock" style="padding-top: 6px; font-size: 16px;"></i>
                 </a>
@@ -1464,6 +1467,38 @@
                </div>
        </div>
     <!-- -->
+                                                                                 <!-- export data on csv file -->
+
+        <div class="modal fade customPopUp" id="TakesFewMinutes" tabindex="-1" role="dialog"
+             aria-labelledby="myModalLabel" aria-hidden="true">
+            <div class="modal-dialog">
+                <div class="modal-content">
+                    <div class="modal-header">
+                        <button type="button" class="close" data-dismiss="modal" aria-hidden="true"></button>
+                        <h3 id="myModalLabel">
+                            <i class="fa fa-cloud-download"></i>{{_(" Export Tasks")}}</h3>
+                    </div>
+                    <div class="modal-body">
+
+                        <p>  <%=msg%></p>
+
+                        <p>{{_("Note : you will receive an email ")}}</p>
+
+                    </div>
+                    <div class="modal-footer">
+                        <button type="button" class="btn default" data-dismiss="modal" id="close_btn">{{_("NO")}}
+                        </button>
+                        <button ng-click="LoadCsvFile()" type="submit" class="btn green btn-primary addContactNow"
+                                id="load_btn">{{_("YES")}}
+                        </button>
+                    </div>
+                </div>
+                <!-- /.modal-content -->
+            </div>
+            <!-- /.modal-dialog -->
+        </div>
+
+<!-- end of modal -->
        <script type="text/javascript">
           $('#assigeeList').slimScroll({
               height: '200px'
