working on custom fields
Former-commit-id: 61f6f943d18ab3a1d31274768ad20cdfe07b96d6 [formerly 5ccf452461b6aef3a170df43ab43a67cab7b48f5] [formerly d939ad8df3c0a2d033068b12ae5a3560d09ddaa9 [formerly 9225249a8a8fc19dcdee3753f49f4a578f12bd01]]
Former-commit-id: aab4da506dff967f05327de9087e9a0e56d3de04 [formerly 24ef38bc54dc0256fd21e49c0302d75384d8009e]
Former-commit-id: 7a997fe1634c6866e6786563e66c21812a1368af

--- a/templates/cases/case_show.html
+++ b/templates/cases/case_show.html
@@ -269,7 +269,7 @@
                                                     <button type="button" ng-click="showEditCustomFields=false" ng-show="showEditCustomFields" class="btn red btn-sm pull-right btn-inline">Save</button>
                                                     <a ng-click="showEditCustomFields=true" ng-hide="showEditCustomFields" class="btn-link addAnotherPhone" data-toggle="modal"><i class="fa fa-pencil"></i> {{_('Add')}} </a> 
                                                 </span>
-                                                <h3>{{_('Custom Fields')}}</h3>
+                                                <h3><i class="fa fa fa-list-alt" style="font-size:20px"></i> {{_('Custom Fields')}}</h3>
                                                 <ul class="list-unstyled contact-infos showList">   
                                                     
                                                     <li ng-repeat="custom in infonodes.customfields">
