--- a/templates/leads/lead_show.html
+++ b/templates/leads/lead_show.html
@@ -1133,7 +1133,7 @@
                                                        data-toggle="modal"></i> {{_('Add')}} </a>
                                                 </span>
 
-                                    <h3 style="margin-top:0px">{{ _('Custom Fields') }}</h3>
+                                    <h3 style="margin-top:0px"><i class="fa fa fa-list-alt" style="font-size:20px"></i> {{ _('Custom Fields') }}</h3>
                                     <ul class="list-unstyled contact-infos showList">
 
                                         <li ng-repeat="custom in infonodes.customfields">
@@ -1716,7 +1716,7 @@
 
                                                     </div>
                                                     <div class="news-blocks blank-card blank-card-bluep">
-                                                        <h3>{{ _('Custom Fields') }}</h3>
+                                                        <h3><i class="fa fa fa-list-alt" style="font-size:20px"></i> {{ _('Custom Fields') }}</h3>
 
                                                         <ul class="list-unstyled contact-infos">
                                                             <li ng-show="showCustomFieldForm">
