--- a/templates/contacts/contact_show.html
+++ b/templates/contacts/contact_show.html
@@ -859,7 +859,7 @@
                               <a ng-click="showEditCustomFields=true" ng-hide="showEditCustomFields"
                                  class="btn-link addAnotherPhone" data-toggle="modal"></i> {{_('Add')}} </a>
                           </span>
-                          <h3>{{_('Custom Fields')}}</h3>
+                          <h3><i class="fa fa fa-list-alt" style="font-size:20px"></i> {{_('Custom Fields')}}</h3>
                           <ul class="list-unstyled contact-infos showList">   
                               
                               <li ng-repeat="custom in infonodes.customfields">
