--- a/templates/base.html
+++ b/templates/base.html
@@ -6,6 +6,10 @@
 
 <!-- BEGIN HEAD -->
 <head>
+
+<!-- start Mixpanel --><script type="text/javascript">(function(e,b){if(!b.__SV){var a,f,i,g;window.mixpanel=b;b._i=[];b.init=function(a,e,d){function f(b,h){var a=h.split(".");2==a.length&&(b=b[a[0]],h=a[1]);b[h]=function(){b.push([h].concat(Array.prototype.slice.call(arguments,0)))}}var c=b;"undefined"!==typeof d?c=b[d]=[]:d="mixpanel";c.people=c.people||[];c.toString=function(b){var a="mixpanel";"mixpanel"!==d&&(a+="."+d);b||(a+=" (stub)");return a};c.people.toString=function(){return c.toString(1)+".people (stub)"};i="disable time_event track track_pageview track_links track_forms register register_once alias unregister identify name_tag set_config people.set people.set_once people.increment people.append people.union people.track_charge people.clear_charges people.delete_user".split(" ");
+for(g=0;g<i.length;g++)f(c,i[g]);b._i.push([a,e,d])};b.__SV=1.2;a=e.createElement("script");a.type="text/javascript";a.async=!0;a.src="undefined"!==typeof MIXPANEL_CUSTOM_LIB_URL?MIXPANEL_CUSTOM_LIB_URL:"file:"===e.location.protocol&&"//cdn.mxpnl.com/libs/mixpanel-2-latest.min.js".match(/^\/\//)?"https://cdn.mxpnl.com/libs/mixpanel-2-latest.min.js":"//cdn.mxpnl.com/libs/mixpanel-2-latest.min.js";f=e.getElementsByTagName("script")[0];f.parentNode.insertBefore(a,f)}})(document,window.mixpanel||[]);
+mixpanel.init("851e1a43c7ce76356e673eae1df2bb2a");</script><!-- end Mixpanel -->
     <meta charset="utf-8"/>
     <meta http-equiv="content-language" content="en">
     <title>i/oGrow Engine Platform</title>
@@ -317,6 +321,7 @@
             <div class="modal-footer">
                 <button class="btn" data-dismiss="modal" aria-hidden="true">{{ _("Close") }}</button>
                 <button type="submit" ng-click="updatelanguage(user,{{ uSerid }})"
+
                         class="btn btn-primary addContactNow">{{ _("Save") }} </button>
             </div>
             </form>
@@ -366,6 +371,8 @@
                     </li>
                 {% endfor %}
             </ul>
+            
+             
             <!-- END SIDEBAR MENU -->
         </div>
     </div>
@@ -421,7 +428,7 @@
      }
      var ROOT = getRoot();
 
-  // var ROOT = 'https://gcdc2013-iogrow.appspot.com/_ah/api';
+   //var ROOT = 'https://gcdc2013-iogrow.appspot.com/_ah/api';
 
 
     // var ROOT = '/_ah/api';
@@ -678,6 +685,11 @@
 
 
 </script>
+<script type="text/javascript">
+    mixpanel.identify(uSerid);
+</script>
+
+
 <script>(function () {
     var w = window;
     var ic = w.Intercom;
