--- a/templates/contacts/contact_new.html
+++ b/templates/contacts/contact_new.html
@@ -1184,7 +1184,7 @@
 </script>
 <script type="text/javascript"> 
     
-     mixpanel.track("Contact_titlen",{"contact.title":"ceo"});
+     mixpanel.track("Contact_title",{"contact.title":"ceo"});
     
      mixpanel.people.set({
     "$email": "{{user.email}}",    // only special properties need the $
