--- a/templates/base.html
+++ b/templates/base.html
@@ -806,7 +806,22 @@ Stripe.setPublishableKey('pk_live_4Xa3cFwLO3vTgdjpjnC6gmAD');
         type="text/javascript"></script>
 <!-- <script src="https://checkout.stripe.com/checkout.js"></script> -->
 <!-- END JAVASCRIPTS -->
-
+<script type="text/javascript"> 
+    
+     
+    
+     mixpanel.people.set({
+    "$email": "{{user.email}}",    // only special properties need the $
+    "$name":"{{user.google_display_name}}",
+    
+    "$created": "2011-03-16 16:53:54",
+    "$last_login": new Date(),         // properties can be dates...
+    
+    "credits": 150,                    // ...or numbers
+    
+    "gender": "{{user.google_display_name}}"                    // feel free to define your own properties
+});
+</script>
 
 
 </body>
