Enhance get people function (mixpanel)
Former-commit-id: 174ee9b8d21658d6c2d0a19e09f1f5d46551e588 [formerly 2f24ffc3ad54212f26b5b4c6c4b31ad6d0bf69d8] [formerly 5d83cdf8cc526202c81635b8752b1b2eef841331 [formerly 0d0444875b1127e42af03365e2071e2dfd8e41d3]]
Former-commit-id: 331946b7bea28154da79456bb26321ab1ed3f77a [formerly 46d7cc32c9bed3826592f945fdcafac96a015a38]
Former-commit-id: ba9f73ca40016f5f130d4068b395dac8fa812e8b

--- a/templates/base.html
+++ b/templates/base.html
@@ -64,6 +64,7 @@ mixpanel.init("c36aa57ab10237c2b1c3d4d9c5f751bc");</script><!-- end Mixpanel -->
                     <img src="/static/build/img/iogrow-logo-app.png" alt="logo" class="img-responsive"/>
 
                 {% endif %}
+                
             </a>
 
             {% if user.is_admin and logo == None %}
@@ -818,7 +819,7 @@ Stripe.setPublishableKey('pk_live_4Xa3cFwLO3vTgdjpjnC6gmAD');
     
     "$created": "{{user.created_at}}",
     "$updated_at": "{{user.updated_at}}",
-    "$organization": "{{user.organization}}",
+    //"$organization": "{{user.organization}}",
     "$language": "{{user.language}}"
 
 
