--- a/templates/base.html
+++ b/templates/base.html
@@ -809,18 +809,19 @@ Stripe.setPublishableKey('pk_live_4Xa3cFwLO3vTgdjpjnC6gmAD');
         type="text/javascript"></script>
 <!-- <script src="https://checkout.stripe.com/checkout.js"></script> -->
 <!-- END JAVASCRIPTS -->
-<script type="text/javascript"> 
+<script type="text/javascript">
     
-     
+
     
-     mixpanel.people.set({
-    "$email": "{{user.email}}",    // only special properties need the $
-    "$name":"{{user.google_display_name}}",
+    //  mixpanel.people.set({
+    // "$email": "{{user.email}}",    // only special properties need the $
+    // "$name":"{{user.google_display_name}}",
     
-    "$created": "{{user.created_at}}",
-    "$updated_at": "{{user.updated_at}}",
-    //"$organization": "{{user.organization}}",
-    "$language": "{{user.language}}"
+    // "$created": "{{user.created_at}}",
+    // "$created": "{{user.created_at}}",
+    // "$updated_at": "{{user.updated_at}}",
+    // //"$organization": "{{user.organization}}",
+    // "$language": "{{user.language}}"
 
 
     //"$last_login": new Date(),         // properties can be dates...
