get people in base.html page
Former-commit-id: c21a029e708c21139a0d60c5d283aaab62f48dca [formerly 076e97518fb12ec2693c40b9800b0f668edea120] [formerly be3f90af5402cb74d058405127242cd056000759 [formerly 6a3acf689e12e9b58e3814f249a528415f2b670b]]
Former-commit-id: fcc052f748dbe429dfcaf64f0f095d2149b9aa95 [formerly 7bb9c26271f5d6768f5df70a57cdcbdc7ca482f7]
Former-commit-id: 441b3159fea812790a2d472a1c61f05a3daf6f13

--- a/templates/base.html
+++ b/templates/base.html
@@ -813,15 +813,15 @@ Stripe.setPublishableKey('pk_live_4Xa3cFwLO3vTgdjpjnC6gmAD');
     
 
     
-    //  mixpanel.people.set({
-    // "$email": "{{user.email}}",    // only special properties need the $
-    // "$name":"{{user.google_display_name}}",
+      mixpanel.people.set({
+     "$email": "{{user.email}}",    // only special properties need the $
+     "$name":"{{user.google_display_name}}",
     
-    // "$created": "{{user.created_at}}",
-    // "$created": "{{user.created_at}}",
-    // "$updated_at": "{{user.updated_at}}",
+     "$created": "{{user.created_at}}",
+     "$created": "{{user.created_at}}",
+     "$updated_at": "{{user.updated_at}}",
     // //"$organization": "{{user.organization}}",
-    // "$language": "{{user.language}}"
+     "$language": "{{user.language}}"
 
 
     //"$last_login": new Date(),         // properties can be dates...
